--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,10 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/src/main/resources/static/
+
+frontend/node_modules
+frontend/.svelte-kit
 
 ### STS ###
 .apt_generated
