--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
 		"@sveltejs/adapter-static": "^3.0.8",
 		"@sveltejs/kit": "^2.20.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
+		"@auth0/auth0-spa-js": "^2.1.0",
 		"svelte": "^5.23.1",
 		"svelte-check": "^4.1.5",
 		"tslib": "^2.8.1",
