added login to backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=freelancer4u
 
 spring.config.import=file:./src/main/resources/application-dev.properties
+
+auth0.domain=dev-vs5rciumcifjv10j.us.auth0.com
+spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
