Configure MongoDB URI via environment variables
Update application.properties to use MONGODB_URI from environment when
available and make dev properties optional. Add the environment variable
to CI workflow for build and test steps.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,6 +25,10 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
 
       - name: Run tests
         run: mvn test
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
