--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=freelancer4u
 
-spring.config.import=file:./src/main/resources/application-dev.properties
+# Use MongoDB URI from environment variable if present, otherwise import dev properties
+spring.data.mongodb.uri=${MONGODB_URI:}
+spring.config.import=optional:file:./src/main/resources/application-dev.properties
 
 auth0.domain=dev-vs5rciumcifjv10j.us.auth0.com
 spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
