Update CI workflow for improved JaCoCo report handling and badge generation

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
         run: mvn clean install
 
       - name: Run tests with JaCoCo
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
         run: mvn test
 
       - name: Generate JaCoCo report
