Fix environment variable setup for Maven build step

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,6 +26,8 @@ jobs:
           distribution: 'temurin'
 
       - name: Build with Maven
+        env:
+          MONGODB_URI: ${{ secrets.MONGODB_URI }}
         run: mvn clean install
 
       - name: Run tests with JaCoCo
