Fix Azure Web App name in workflow and update Dockerfile to use full image path

--- a/.github/workflows/azure-containerwebapp.yml
+++ b/.github/workflows/azure-containerwebapp.yml
@@ -5,7 +5,7 @@ name: Build and deploy a container to an Azure Web App
 env:
   # Set the name of the Azure Web App to deploy to.
   # IMPORTANT: Replace '[ihr ZHAW-Kürzel]' with your actual ZHAW abbreviation.
-  AZURE_WEBAPP_NAME: zhaw-exercise-[gstoealb
+  AZURE_WEBAPP_NAME: zhaw-exercise-gstoealb
 
 # Triggers for the workflow
 on:
