Update MongoDB URI environment variable reference in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=freelancer4u
 
 # Use MongoDB URI from environment variable if present, otherwise import dev properties
-spring.data.mongodb.uri=${MONGODB_URI:}
+spring.data.mongodb.uri=${CUSTOMCONNSTR_MONGODB_URI:}
 spring.config.import=optional:file:./src/main/resources/application-dev.properties
 
 auth0.domain=dev-vs5rciumcifjv10j.us.auth0.com
