--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,12 +27,12 @@ jobs:
 
       - name: Build with Maven
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CUSTOMCONNSTR_MONGODB_URI: ${{ secrets.CUSTOMCONNSTR_MONGODB_URI }}
         run: mvn clean install
 
       - name: Run tests with JaCoCo
         env:
-          MONGODB_URI: ${{ secrets.MONGODB_URI }}
+          CUSTOMCONNSTR_MONGODB_URI: ${{ secrets.CUSTOMCONNSTR_MONGODB_URI }}
         run: mvn test
 
       - name: Generate JaCoCo report
