--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp==3.11.14
 aiosignal==1.3.2
 annotated-types==0.7.0
 anyio==4.7.0
+appnope==0.1.4
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -49,6 +50,7 @@ GitPython==3.1.43
 google-auth==2.38.0
 googleapis-common-protos==1.69.2
 greenlet==3.1.1
+groq==0.24.0
 grpcio==1.71.0
 h11==0.14.0
 httpcore==1.0.7
@@ -62,6 +64,7 @@ importlib_metadata==8.6.1
 importlib_resources==6.5.2
 ipykernel==6.29.5
 ipython==8.30.0
+ipython_pygments_lexers==1.1.1
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.4
@@ -190,7 +193,8 @@ terminado==0.18.1
 threadpoolctl==3.5.0
 tinycss2==1.4.0
 tokenizers==0.21.1
-torch==2.5.1+cpu
+torch==2.6.0
+torchvision==0.21.0
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
