--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,12 @@ spring.security.oauth2.resourceserver.jwt.issuer-uri=https://${auth0.domain}/
 spring.ai.openai.api-key=${SPRING_AI_OPENAI_API_KEY}
 #For debugging (optional):
 logging.level.org.springframework.ai.chat.client.advisor=DEBUG
+
+# Email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=albertgstoehl@gmail.com
+spring.mail.password=hmdt ewkp apkc ynlc
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
